<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- ////////////////////   NOT TRANSLATABLE \\\\\\\\\\\\\\\\\\\\ -->
    <!-- SignIN -->
    <string name="appName" translatable="false">Go4Lunch</string>
    <string name="twitter" translatable="false">twitter.com</string>

    <!--     Restaurant Fragment-->
    <string name="text_restaurant_first_line" translatable="false">Restaurant_Name</string>
    <string name="text_restaurant_second_line" translatable="false">restaurant_type_and_address</string>
    <string name="text_third_line" translatable="false">restaurant_hours</string>
    <string name="restaurant_distance" translatable="false">200m</string>
    <string name="restaurant_text_number_workmates" translatable="false">(2)</string>
    <string name="restaurant_rating" translatable="false">restaurant_rating</string>
    <string name="restaurant_picture" translatable="false">restaurant_picture</string>
    <string name="no_items" translatable="false">No items.</string>
    <string name="menu_main_activity_search" translatable="false">Search</string>
    <string name="text_workmate" translatable="false">text_workmate_name</string>
    <string name="workmate_picture" translatable="false">workmate_picture</string>

    <!-- Details Fragment-->
    <string name="restaurant_details_picture" translatable="false">restaurant_details_picture</string>
    <string name="activity_splash_logo" translatable="false">activity_splash_logo</string>
    <string name="error_unknown_error" translatable="false" tools:ignore="MissingTranslation">Unknown error while creating user</string>
    <string name="fragment_settings_backpress_description" translatable="false">fragment_settings_backpress_description</string>
    <string name="activity_main_drawer_logo_description" translatable="false">activity_main_drawer_logo_description</string>
    <string name="restaurant_details_picture_description" translatable="false">restaurant_details_picture</string>
    <string name="restaurant_details_star1_description" translatable="false">restaurant_details_star1</string>
    <string name="restaurant_details_star2_description" translatable="false">restaurant_details_star2</string>
    <string name="restaurant_details_star3_description" translatable="false">restaurant_details_star3</string>
    <string name="website_image" translatable="false">website_image</string>
    <string name="menu_main_activity_clear" translatable="false">Clear</string>


    <!-- ///////////////////////  TRANSLATABLE \\\\\\\\\\\\\\\\\\\\ -->

    <!-- SignIN -->
    <string name="appSentence">Find a nice restaurant and invite your co-workers for lunch!</string>


    <!-- Main Activity -->
    <string name="title_mapview">Map View</string>
    <string name="title_listview">List View</string>
    <string name="title_workmates">Workmates</string>
    <string name="input_your_place">Search for a restaurant</string>
    <string name="autoCompleteTextView_noresult">No results found</string>

    <!-- Main Activity - Drawer-->
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="main_activity_lunch_no_restaurant_chosen">You have not chosen a restaurant yet !</string>


    <string name="account_name" translatable="false">Account_Name</string>
    <string name="account_mail" translatable="false">Account Mail</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="bg_portraitBackgroundDescription" translatable="false">Background_image</string>
    <string name="logoTextDescription" translatable="false">Logo</string>

    <!--     Restaurant Fragment-->
    <string name="restaurant_list_no_restaurants_to_show">No Restaurants to show in %1$dm radius</string>
    <string name="restaurant_list_no_restaurants_location_denied">Please accept to share your location to see the restaurants near your position</string>

    <!--    Permissions-->
    <string name="permissions_not_granted">Permissions were not granted.</string>

    <!--    AlertDialog-->
    <string name="alertdialog_extendradius_message">No restaurant at %1$dm from your location. Extend the research by 1km?</string>
    <string name="alertdialog_extendradius_title">Extend the research radius?</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>

    <!-- Settings Fragment-->
    <string name="fragment_settings_title">Settings</string>

    <!-- Details Fragment-->
    <string name="restaurant_details_phone_call">CALL</string>

    <string name="workmates_list_no_workmates_to_show">No workmates.</string>
    <string name="no_phone_number">No phone number</string>
    <string name="no_website">No website</string>
    <string name="restaurant_details_like">LIKE</string>
    <string name="restaurant_details_unlike">UNLIKE</string>
    <string name="restaurant_details_website">WEBSITE</string>
    <string name="fragment_settings_radius_search">Radius search: %1$d meters</string>
    <string name="no_picture">No picture</string>
    <string name="fragment_settings_update_username_text">Update your username:</string>
    <string name="item_workmates_restaurant_text_null">has\'nt decided yet.</string>
    <string name="restaurant_Chosen">You chose the restaurant %1$s.</string>
    <string name="details_fragment_alertdialog_restaurant_choice_change_message">Do you want to cancel your previous restaurant choice for the %1$s restaurant ?</string>
    <string name="details_fragment_alertdialog_restaurant_choice_change_title">Change your restaurant choice ?</string>
    <string name="details_fragment_alertdialog_restaurant_choice_cancellation_message">Do you want to cancel this restaurant choice ?</string>
    <string name="item_workmates_restaurant_text">is joining the restaurant: \n  %1$s.</string>
    <string name="details_fragment_alertdialog_restaurant_choice_cancellation_title" tools:ignore="MissingTranslation">Cancel this restaurant choice?</string>
    <string name="item_restaurant_no_opening_hours" type="id">No opening hours available</string>
    <string name="item_workmates_restaurant_text_detailsFragment">is joining !</string>
    <string name="autoCompleteTextView_noresult_toast">No results for %1$s</string>
    <string name="fragment_settings_update_notifications_text">Notifications</string>
    <string name="fragment_setting_validate_username_text">Validate</string>
    <string name="fragment_settings_update_notifications_hint">A notification will be sent everyday at noon</string>
    <string name="fragment_settings_update_dark_mode_text">Dark Mode</string>

    <string name="notification_lunch_title">Your lunch for today!</string>
    <string name="notification_no_lunch_chosen">Unfortunately, you did not chose a restaurant today!</string>
    <string name="notification_lunch_alone">" You chose the restaurant: %1$s.\nlocated at %2$s\nUnfortunately, you will eat alone…"</string>
    <string name="notification_lunch_with_one_workmate">You chose the restaurant: %1$s \nlocated at %2$s \nYou will lunch with one workmate: %3$s.</string>
    <string name="notification_lunch_with_few_workmate">You chose the restaurant: %1$s \n located at %2$s.\n You will lunch with %3$d workmates: %4$s.</string>
    <string name="notification_message">You chose the restaurant %1$s \nlocated at %2$s. \nYou will lunch with %3$s</string>
    <string name="notification_workmatesstring_builder_and">" and "</string>

    <string name="channel_name" translatable="false">notifications_chanel_name</string>
    <string name="channel_description" translatable="false">notifications_channel_description</string>
    <string name="notifications_no_internet_connection">Please connect to the network to know the details of your lunch.</string>
    <string name="notifications_firebase_failure">Please tap the notification to see further details about your today lunch.</string>

    <string name="item_restaurant_no_picture_no_text">No Pic</string>
    <string name="main_activity_restaurants_sort_name_asc"><![CDATA[Sort A -> Z]]></string>
    <string name="main_activity_restaurants_sort_name_desc"><![CDATA[Sort Z -> A]]></string>
    <string name="main_activity_restaurants_sort_rating_desc">Sort by Rating</string>
    <string name="main_activity_restaurants_sort_workmates_desc">Sort by Workmates</string>
    <string name="main_activity_restaurants_sort_distance_asc">Sort by Distance</string>
    <string name="main_activity_restaurants_no_workmates_to_sort_toast">No workmates chose a restaurant up to now.</string>
    <string name="signin_no_connection_text">You are not connected\nto the Internet.\nPlease connect your device</string>
    <string name="details_phone">phone:</string>


</resources>